# auc_measurement

./: pyproject.toml
auc_measurement/: config.py  config_schema.py  dir_stack.py  ml_handlers.py  registries.py  run_expts.py  scores.py  version.py
auc_measurement/resources/: git_info.json
experiment_configs/: default_logging_config.json  full_data_run.json  integration_test_small.json  integration_test_tiny.json
tests/: test_dir_stack.py  test_ml_handlers.py  test_run_expts.py  test_version.py
